--- a/abstracts/23_proj_jae.html
+++ b/abstracts/23_proj_jae.html
@@ -6,34 +6,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.5">
 <html>
 <body>
-    <div id="page-container">
-        <div id="hero_image">
-            <ul class="nav">
-                <li><a class = "nav" href="../index.html">Home</a></li>
-                <li><a class = "nav" href="../abstracts.html">Abstracts</a></li>
-                <li><a class = "nav" href="../books.html">Books</a></li>                
-                <li><a class = "nav" href="../cv.html">C.V.</a></li>
-                <li><a class = "nav" href="../music.html">Music</a></li>
-                <li><a class = "nav" href="../software.html">Software</a></li>
-                <li><a class = "nav" href="../acknowledgements.html">Acknowledgements</a></li>
-            </ul>
-        	<div id="hero_text">
-        		<h1>The Cognitive Phenotype of Juvenile Absence Epilepsy and its Heritability: An Investigation of Patients and Unaffected Siblings</h1>
-        		<h2>Caciagli, Ratcliffe, Xiao, ... and Wandschneider, 2022</h2>
-            </div>
-        </div>
-        <div id="page_content">
-            <h3>Abstract</h3>
-        	<p><strong>Objective:</strong> The cognitive profile of juvenile absence epilepsy (JAE) remains largely uncharacterized. This study aimed to: (1) elucidate the neuropsychological profile of JAE; (2) identify familial cognitive traits by investigating unaffected JAE siblings; (3) establish the clinical meaningfulness of JAE-associated cognitive traits; (4) determine whether cognitive traits across the idiopathic generalized epilepsy (IGE) spectrum are shared or syndrome-specific, by comparing JAE to juvenile myoclonic epilepsy (JME); and (5) identify relationships between cognitive abilities and clinical characteristics. <strong>Methods:</strong> We investigated 123 participants—23 patients with JAE, 16 unaffected siblings of JAE patients, 45 healthy controls, and 39 patients with JME—who underwent a comprehensive neuropsychological test battery including measures within four cognitive domains: attention/psychomotor speed, language, memory, and executive function. We correlated clinical measures with cognitive performance data to decode effects of age at onset and duration of epilepsy. <strong>Results:</strong> Cognitive performance in individuals with JAE was reduced compared to controls across attention/psychomotor speed, language, and executive function domains; those with ongoing seizures additionally showed lower memory scores. Patients with JAE and their unaffected siblings had similar language impairment compared to controls. Individuals with JME had worse response inhibition than those with JAE. Across all patients, those with older age at onset had better attention/psychomotor speed performance. <strong>Significance:</strong> JAE is associated with wide-ranging cognitive difficulties that encompass domains reliant on frontal lobe processing, including language, attention, and executive function. JAE siblings share impairment with patients on linguistic measures, indicative of a familial trait. Executive function subdomains may be differentially affected across the IGE spectrum. Cognitive abilities are detrimentally modulated by an early age at seizure onset.
-            </p>
-            <a href="https://onlinelibrary.wiley.com/doi/10.1111/epi.17719">Full text link</a>
-        </div>
-        <footer>
-            <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
-            <br/>Contact:
-            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
-        </footer>
+  <div id="page-container">
+    <div id="hero_image">
+      <ul class="nav">
+        <li><a class = "nav" href="../index.html">Home</a></li>
+        <li><a class = "nav" href="../abstracts.html">Abstracts</a></li>
+        <li><a class = "nav" href="../books.html">Books</a></li>
+        <li><a class = "nav" href="../cv.html">CV</a></li>
+        <li><a class = "nav" href="../music.html">Music</a></li>
+        <li><a class = "nav" href="../software.html">Software</a></li>
+        <li><a class = "nav" href="../acknowledgements.html">Acknowledgements</a></li>
+      </ul>
+      <div id="hero_text">
+        <h1>The Cognitive Phenotype of Juvenile Absence Epilepsy and its Heritability: An Investigation of Patients and Unaffected Siblings</h1>
+        <h2>Caciagli, Ratcliffe, Xiao, ... and Wandschneider, 2022</h2>
+      </div>
     </div>
+    <div id="page_content">
+      <h3>Abstract</h3>
+      <p><strong>Objective:</strong> The cognitive profile of juvenile absence epilepsy (JAE) remains largely uncharacterized. This study aimed to: (1) elucidate the neuropsychological profile of JAE; (2) identify familial cognitive traits by investigating unaffected JAE siblings; (3) establish the clinical meaningfulness of JAE-associated cognitive traits; (4) determine whether cognitive traits across the idiopathic generalized epilepsy (IGE) spectrum are shared or syndrome-specific, by comparing JAE to juvenile myoclonic epilepsy (JME); and (5) identify relationships between cognitive abilities and clinical characteristics. <strong>Methods:</strong> We investigated 123 participants—23 patients with JAE, 16 unaffected siblings of JAE patients, 45 healthy controls, and 39 patients with JME—who underwent a comprehensive neuropsychological test battery including measures within four cognitive domains: attention/psychomotor speed, language, memory, and executive function. We correlated clinical measures with cognitive performance data to decode effects of age at onset and duration of epilepsy. <strong>Results:</strong> Cognitive performance in individuals with JAE was reduced compared to controls across attention/psychomotor speed, language, and executive function domains; those with ongoing seizures additionally showed lower memory scores. Patients with JAE and their unaffected siblings had similar language impairment compared to controls. Individuals with JME had worse response inhibition than those with JAE. Across all patients, those with older age at onset had better attention/psychomotor speed performance. <strong>Significance:</strong> JAE is associated with wide-ranging cognitive difficulties that encompass domains reliant on frontal lobe processing, including language, attention, and executive function. JAE siblings share impairment with patients on linguistic measures, indicative of a familial trait. Executive function subdomains may be differentially affected across the IGE spectrum. Cognitive abilities are detrimentally modulated by an early age at seizure onset.
+      </p>
+      <a href="https://onlinelibrary.wiley.com/doi/10.1111/epi.17719">Full text link</a>
+    </div>
+    <footer>
+      <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+      <br/>Contact:
+      <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+    </footer>
+  </div>
 </body>
 
 </html>
