--- a/books.html
+++ b/books.html
@@ -26,16 +26,68 @@
       <p class="introtext">Recommendations are made purely based on my own subjective reading experience.  Audiobooks are included based on the content of the book, not the presentation.</p>
       <h3>Audiobooks:</h3>
     	<ul>
-        <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]:</a> Occasionally philosophical, often contemplative, and consistently hilarious, this sci-fi series is full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
+        <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - Fry, S. & Freeman, M. -  The Hitchhiker's Guide to the Galaxy [1-5]:</a> Occasionally philosophical, often contemplative, and consistently hilarious, this sci-fi series is full of imagination and classically British charm. The audiobooks are marvellously voiced, too.</li>
+				<li><a href="https://www.goodreads.com/book/show/100034.Quantum">Al-Khalili, J. - Kermode, H. - Quantum: A Guide for the Perplexed:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/28789711-spqr">Beard, M. - Nash, P. - SPQR: A Histroy of Ancient Rome:</a> [INCOMPLETE LISTENING]</li>
+				<li><a href="https://www.goodreads.com/book/show/21.A_Short_History_of_Nearly_Everything">Bryson, B. - Roberts, W. - A Short History of Nearly Everything:</a> </li>
+				<li><a href="https://www.goodreads.com/series/333437-deda-files">Croshaw, Y. - Croshaw, Y. - The DEDA Files [1-2]:</a> </li>
+				<li><a href="https://www.goodreads.com/series/272098-jacques-mckeown">Croshaw, Y. - Croshaw, Y. - Jacques McKeown [1]:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/15821931-jam">Croshaw, Y. - Croshaw, Y. - Jam:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/7923163-mogworld">Croshaw, Y. - Croshaw, Y. - Mogworld:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/42972023-the-anarchy">Dalrymple, W. - Sagar, S. - The Anarchy: The East India Company, Corporate Violence, and the Pillage of an Empire:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/1842.Guns_Germs_and_Steel">Diamond, J. - Ordunio, D. - Guns, Germs, and Steel:</a> </li>
+				<li><a href="https://www.goodreads.com/series/243176-stephen-fry-s-great-mythology">Fry, S. - Fry, S. - Stephen Fry's Great Mythology [1-2]:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/23692271-sapiens">Harari, Y.N. - Perkins, D. - Sapiens: A Brief History of Humankind:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/15814588-a-history-of-the-world">Marr, A. - Marr, A. & Timson, D. - A History of the World:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/54479.Around_the_World_in_Eighty_Days">Verne, J. - Pritchard, M. - Around the World in Eighty Days:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/32829.Journey_to_the_Center_of_the_Earth">Verne, J. - Curry, T. - Journey to the Center of the Earth:</a> </li>
       </ul>
       <h3>Print:</h3>
       <ul>
-        <li><a href="https://www.goodreads.com/book/show/1137702.The_Wendigo">Blackwood, A. - The Wendigo:</a> A classic American horror tale. Predating H.P. Lovecraft, Blackwood nevertheless create a cosmic sense of dread by exploring stark imagery in the vastness of nature.</li>
-        <li><a href="https://www.goodreads.com/book/show/55399.Gardens_of_the_Moon">Erikson, S. & Esselmont, I. - Malazan book of the Fallen:</a> </li>
-        <li><a href="https://www.goodreads.com/book/show/228665.The_Eye_of_the_World?from_search=true&from_srp=true&qid=a0KJ27JvrL&rank=1">Jordan, R. & Sanderson, B. - The Wheel of Time:</a> </li>
-        <li><a href="https://www.goodreads.com/book/show/153747.Moby_Dick_or_the_Whale?from_search=true&from_srp=true&qid=N4n5ad0b7f&rank=1">Melville, H. - Moby-Dick:</a> The classic epic of obsession and adventure. The only book I have ever (partially) read that I would recommend the abridged version of--the cetology chapters absolutely destroy any narrative cohesion. [INCOMPLETE READING]</li>
-        <li><a href="https://www.goodreads.com/book/show/5907.The_Hobbit_or_There_and_Back_Again?from_search=true&from_srp=true&qid=7MdosMoq7u&rank=1">Tolkein, J.R.R. - The Hobbit:</a> </li>
-        <li><a href="https://www.goodreads.com/book/show/33.The_Lord_of_the_Rings?from_search=true&from_srp=true&qid=qWUWwsdNOw&rank=2">Tolkein, J.R.R. - The Lord of the Rings:</a> </li>
+				<li><a href="https://www.goodreads.com/series/43644-the-first-law">Abercrombie, J. - The First Law [1-6]:</a> </li>
+				<li><a href="https://www.goodreads.com/series/211497-the-age-of-madness">Abercrombie, J. - Age of Madness [1-3]:</a> </li>
+        <li><a href="https://www.goodreads.com/book/show/1768603.The_White_Tiger">Adiga, A. - The White Tiger:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/1137702.The_Wendigo">Blackwood, A. - The Wendigo:</a> A classic American horror tale. Predating H.P. Lovecraft, Blackwood nevertheless create a cosmic sense of dread by exploring stark imagery in the vastness of nature.</li>
+        <li><a href="https://www.goodreads.com/book/show/1078.The_Good_Earth">Buck, P.S. - The Good Earth:</a> </li>
+				<li><a href="https://www.goodreads.com/series/49996-sherlock-holmes">Conan Doyle, A. - Sherlock Holmes [1-10]:</a> </li>
+				<li><a href="https://www.goodreads.com/series/54284-the-chronicles-of-the-black-company">Cook, G. - The Chronicles of the Black Company [1-3.5]:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/8703973-beware-of-the-dog">Dahl, R. - Beware of the Dog:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/36402034-do-androids-dream-of-electric-sheep">Dick, P.K. - Do Androids Dream of Electric Sheep?:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/216363.The_Man_in_the_High_Castle">Dick, P.K. - The Man in the High Castle:</a> </li>
+        <li><a href="https://www.goodreads.com/book/show/7126.The_Count_of_Monte_Cristo">Dumas, A. - The Count of Monte Cristo:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/55399.Gardens_of_the_Moon">Erikson, S. & Esselmont, I. - Malazan book of the Fallen [1 - ?]:</a> </li>
+        <li><a href="https://www.goodreads.com/series/49623-james-bond-original-series">Fleming, I. - James Bond [1-14]:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/423125.The_African_Queen">Forester, C.S. - The African Queen:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/42966796-brown-on-resolution">Forester, C.S. - Brown on Resolution:</a> </li>
+        <li><a href="https://www.goodreads.com/series/49812-hornblower-saga-chronological-order">Forester, C.S. - Hornblower Saga [1-14]:</a> </li>
+        <li><a href="https://www.goodreads.com/book/show/726374.Payment_Deferred">Forester, C.S. - Payment Deferred:</a> </li>
+        <li><a href="https://www.goodreads.com/book/show/2271903.The_Peacemaker">Forester, C.S. - The Peacemaker:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/16793.Stardust">Gaiman, N. - Stardust:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/168668.Catch_22">Heller, J. - Catch-22:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/2165.The_Old_Man_and_the_Sea">Hemingway, E. - The Old Man and the Sea:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/52036.Siddhartha">Hesse, H. - Siddhartha:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/16631.Steppenwolf">Hesse, H. - Steppenwolf:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/228665.The_Eye_of_the_World">Jordan, R. & Sanderson, B. - The Wheel of Time [1 - 14]:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/485894.The_Metamorphosis">Kafka, F. - The Metamorphosis:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/17690.The_Trial">Kafka, F. - The Trial:</a> </li>				
+				<li><a href="https://www.goodreads.com/book/show/18373.Flowers_for_Algernon">Keyes, D. - Flowers for Algernon:</a> </li>
+				<li><a href="https://www.goodreads.com/author/show/3389.Stephen_King">King, Stephen. - Almost everything [1974-2014]:</a> </li>
+				<li><a href="https://www.goodreads.com/series/40750-the-dark-tower">King, Stephen. - The Dark Tower [1-7]:</a> </li>
+				<li><a href="https://www.goodreads.com/author/show/9494.H_P_Lovecraft">Lovecraft, H.P. - Everything:</a> </li>
+				<li><a href="https://www.goodreads.com/series/43531-gentleman-bastard">Lynch, S. - Gentleman Bastard [1-3]:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/153747.Moby_Dick_or_the_Whale">Melville, H. - Moby-Dick:</a> The classic epic of obsession and adventure. The only book I have ever (partially) read that I would recommend the abridged version of--the cetology chapters absolutely destroy any narrative cohesion. [INCOMPLETE READING]</li>
+				<li><a href="https://www.goodreads.com/book/show/7604.Lolita">Nabokov, V. - Lolita:</a> </li>
+        <li><a href="https://www.goodreads.com/author/show/1654.Terry_Pratchett">Pratchett, T. - Everything:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/12067.Good_Omens">Pratchett, T. & Garman, N. - Good Omens: The Nice and Accurate Prophecies of Agnes Nutter, Witch:</a> </li>
+				<li><a href="https://www.goodreads.com/series/44427-his-dark-materials">Pullman, P. - His Dark Materials [1-3]:</a> </li>
+				<li><a href="https://www.goodreads.com/series/45262-the-kingkiller-chronicle">Rothfuss, P. - The Kingkiller Chronicle [1-2]:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/5107.The_Catcher_in_the_Rye">Salinger, J.D. - The Catcher in the Rye:</a> </li>
+				<li><a href="https://www.goodreads.com/series/58631-illuminatus">Shea, R. & Wilson, R.A. - The Illuminatus! Trilogy [1-3]:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/7745.Fear_and_Loathing_in_Las_Vegas">Thompson, H.S. - Fear and Loathing in Las Vegas:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/5907.The_Hobbit_or_There_and_Back_Again">Tolkein, J.R.R. - The Hobbit:</a> </li>
+				<li><a href="https://www.goodreads.com/series/66175-middle-earth">Tolkein, J.R.R. - The Lord of the Rings:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/4981.Slaughterhouse_Five">Vonnegut, K. - Slaughterhouse-Five:</a> </li>
+        <li><a href="https://www.goodreads.com/book/show/23966.Filth">Welsh, I. - Filth:</a> </li>
       </ul>
     </div>
     <footer>
