--- a/abstracts/20_cognitivefunction.html
+++ b/abstracts/20_cognitivefunction.html
@@ -29,7 +29,7 @@
 			<a href="https://www.frontiersin.org/articles/10.3389/fneur.2020.00144/full">Full text available here</a>
       <div class="row">
 	      <a href="../resources/20_cognitivefunction.pdf" download="20_cognitivefunction-CR.pdf">
-	        <img class="col" src="img/20_cognitivefunction.png" alt="Cognitive Function in Genetic Generalized Epilepsies: Insights From Neuropsychology and Neuroimaging" style="width:100%;min-width:100%">
+	        <img class="col" src="../img/20_cognitivefunction.png" alt="Cognitive Function in Genetic Generalized Epilepsies: Insights From Neuropsychology and Neuroimaging" style="width:100%;min-width:100%">
 	      </a>
 	    </div>
     </div>
