--- a/abstracts/21_subcorticalshape.html
+++ b/abstracts/21_subcorticalshape.html
@@ -32,7 +32,7 @@
       <h3>Results</h3>
       <p>Patients with NCC and recurrent seizures showed significant (corrected p < .05) inward surface deflation in localised regions of the right hippocampus compared to seizure-free NCC patients, when age and sex were modelled as nuisance regressors (Fig. 1). There was no significant or trend level differences in regional shape of the remaining structures between patients presenting with or without seizures.
       </p>
-      <img class="figure" src="../img/21_proj_shape_fig1.png" alt="Figure 1. Surface shape analysis results, showing significant inwards deflation of the right hippocampus in the seizure-recurrent group.">
+      <img class="figure" src="../img/21_subcorticalshape_fig1.png" alt="Figure 1. Surface shape analysis results, showing significant inwards deflation of the right hippocampus in the seizure-recurrent group.">
       <p class="captiontext"><strong>Figure 1.</strong> Significant inwards deflation of the right hippocampus in seizure-recurrent NCC patients, compared to seizure-free NCC patients. Areas in red represent vertices significantly deflated in the seizure-recurrent group, after multiple-comparisons correction. 
       </p>
       <h3>Conclusions</h3>
@@ -46,6 +46,11 @@
         <li>Leek NJ, Neason M, Kreilkamp B a. K, de Bezenac C, Ziso B, Elkommos S, Das K, Marson AG, Keller SS. Thalamohippocampal atrophy in focal epilepsy of unknown cause at the time of diagnosis. <em>Eur J Neurol</em> (2021) 28:367–376. doi:<a href="https://onlinelibrary.wiley.com/doi/10.1111/ene.14565">10.1111/ene.14565</a></li>
         <li>Jenkinson M, Beckmann CF, Behrens TEJ, Woolrich MW, Smith SM. FSL. <em>NeuroImage</em> (2012) 62:782–790. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811911010603?via%3Dihub">10.1016/j.neuroimage.2011.09.015</a></li>
       </ol>
+      <div class="row">
+	      <a href="../resources/21_subcorticalshape.pdf" download="21_subcorticalshape-CR.pdf">
+	        <img class="col" src="../img/21_subcorticalshape.png" alt="Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures" style="width:100%;min-width:100%">
+	      </a>
+	    </div>
     </div>
     <footer>
       <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
