--- a/abstracts/24_individualisedfibre.html
+++ b/abstracts/24_individualisedfibre.html
@@ -30,6 +30,11 @@
 			Significance: We first demonstrate the relationship between angular resolution and tractography performance, then further characterise the white matter abnormalities that may underlie drug-resistance networks in focal epilepsy, and expand on previous attempts to synthesise individualised quantitative DWI evaluation. This study and its associated materials demonstrate both the feasibility and value of individualised approaches in epilepsy.
       </p>
       <a href="">Full preprint coming soon</a>
+      <div class="row">
+	      <a href="../resources/24_individualisedfibre.pdf" download="24_individualisedfibre-CR.pdf">
+	        <img class="col" src="../img/24_individualisedfibre.png" alt="Individualised Fibre-Ball White Matter Imaging Analysis of Drug Resistance in Focal Epilepsy" style="width:100%;min-width:100%">
+	      </a>
+	    </div>
     </div>
     <footer>
       <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
