--- a/abstracts.html
+++ b/abstracts.html
@@ -19,7 +19,7 @@
       </ul>
       <div id="hero_text">
         <h1>Abstracts</h1>
-        <h2>Summaries of papers, posters, and presentations I've contributed to</h2>
+        <h2>Links to and summaries of papers, posters, and presentations I've contributed to</h2>
       </div>
     </div>
     <div id="page_content">
@@ -36,6 +36,7 @@
       <h3>Contributing author:</h3>
       <ul>
         <li><a href="abstracts/23_cognitivephenotype.html">2023 - The Cognitive Phenotype of Juvenile Absence Epilepsy and its Heritability: An Investigation of Patients and Unaffected Siblings</a></li>
+        <li><a href="abstracts/24_exploringwhite.html">2023 - Exploring White Matter Microstructure with Symptom Severity and Outcomes Following Deep Brain Stimulation in Tremor Syndromes</a></li>
       </ul>
         <h3>Other media:</h3>
       <ul>
