--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
           <li><a href="music.html">Music:</a> Some recommendations for listening material; mostly (but not exclusively!) metal</li>
           <li><a href="software.html">Software:</a> A (hopefully) comprehensive collection of software that I use regularly, for myriad purposes</li>
         </ul>
+      <h3>Other Links:</h3>
+			<ul>
+				<li><a href="https://orcid.org/0000-0002-3824-1681">ORCID
+				<li><a href="https://www.researchgate.net/profile/Corey-Ratcliffe">ResearchGate
+				<li><a href="https://scholar.google.com/citations?user=bdMJzFwAAAAJ&hl=en&oi=ao">Scholar
+				<li><a href="https://www.linkedin.com/in/corey-alan-ratcliffe/">LinkedIn
+				<li><a href="https://www.liverpool.ac.uk/systems-molecular-and-integrative-biology/research/groups/brain-imaging/">Lab Page
+				<li><a href="https://www.instagram.com/might_be_corey/?hl=en-gb">Instagram
+				<li><a href="https://www.last.fm/user/C_Ratcliffe">Last.fm
+				<li><a href="https://x.com/c__ratcliffe">Twitter/X
+			</ul>
       </div>
     <footer>
       <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
