--- a/abstracts.html
+++ b/abstracts.html
@@ -19,7 +19,7 @@
       </ul>
       <div id="hero_text">
         <h1>Abstracts</h1>
-        <h2>Links to and summaries of papers, posters, and presentations I've contributed to</h2>
+        <h2>Links to abstracts and summaries of my affiliated projects</h2>
       </div>
     </div>
     <div id="page_content">
