--- a/books.html
+++ b/books.html
@@ -31,7 +31,7 @@
 				<li><a href="https://www.goodreads.com/book/show/28789711-spqr">Beard, M. - Nash, P. - SPQR: A Histroy of Ancient Rome:</a> [INCOMPLETE LISTENING]</li>
 				<li><a href="https://www.goodreads.com/book/show/21.A_Short_History_of_Nearly_Everything">Bryson, B. - Roberts, W. - A Short History of Nearly Everything:</a> </li>
 				<li><a href="https://www.goodreads.com/series/333437-deda-files">Croshaw, Y. - Croshaw, Y. - The DEDA Files [1-2]:</a> </li>
-				<li><a href="https://www.goodreads.com/series/272098-jacques-mckeown">Croshaw, Y. - Croshaw, Y. - Jacques McKeown [1]:</a> </li>
+				<li><a href="https://www.goodreads.com/series/272098-jacques-mckeown">Croshaw, Y. - Croshaw, Y. - Jacques McKeown [1-3]:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/15821931-jam">Croshaw, Y. - Croshaw, Y. - Jam:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/7923163-mogworld">Croshaw, Y. - Croshaw, Y. - Mogworld:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/42972023-the-anarchy">Dalrymple, W. - Sagar, S. - The Anarchy: The East India Company, Corporate Violence, and the Pillage of an Empire:</a> </li>
@@ -50,7 +50,7 @@
 				<li><a href="https://www.goodreads.com/book/show/1137702.The_Wendigo">Blackwood, A. - The Wendigo:</a> A classic American horror tale. Predating H.P. Lovecraft, Blackwood nevertheless create a cosmic sense of dread by exploring stark imagery in the vastness of nature.</li>
         <li><a href="https://www.goodreads.com/book/show/1078.The_Good_Earth">Buck, P.S. - The Good Earth:</a> </li>
 				<li><a href="https://www.goodreads.com/series/49996-sherlock-holmes">Conan Doyle, A. - Sherlock Holmes [1-10]:</a> </li>
-				<li><a href="https://www.goodreads.com/series/54284-the-chronicles-of-the-black-company">Cook, G. - The Chronicles of the Black Company [1-3.5]:</a> </li>
+				<li><a href="https://www.goodreads.com/series/54284-the-chronicles-of-the-black-company">Cook, G. - The Chronicles of the Black Company [1-6]:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/8703973-beware-of-the-dog">Dahl, R. - Beware of the Dog:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/36402034-do-androids-dream-of-electric-sheep">Dick, P.K. - Do Androids Dream of Electric Sheep?:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/216363.The_Man_in_the_High_Castle">Dick, P.K. - The Man in the High Castle:</a> </li>
@@ -78,7 +78,7 @@
 				<li><a href="https://www.goodreads.com/book/show/153747.Moby_Dick_or_the_Whale">Melville, H. - Moby-Dick:</a> The classic epic of obsession and adventure. The only book I have ever (partially) read that I would recommend the abridged version of--the cetology chapters absolutely destroy any narrative cohesion. [INCOMPLETE READING]</li>
 				<li><a href="https://www.goodreads.com/book/show/7604.Lolita">Nabokov, V. - Lolita:</a> </li>
         <li><a href="https://www.goodreads.com/author/show/1654.Terry_Pratchett">Pratchett, T. - Everything:</a> </li>
-				<li><a href="https://www.goodreads.com/book/show/12067.Good_Omens">Pratchett, T. & Garman, N. - Good Omens: The Nice and Accurate Prophecies of Agnes Nutter, Witch:</a> </li>
+				<li><a href="https://www.goodreads.com/book/show/12067.Good_Omens">Pratchett, T. & Gaiman, N. - Good Omens: The Nice and Accurate Prophecies of Agnes Nutter, Witch:</a> </li>
 				<li><a href="https://www.goodreads.com/series/44427-his-dark-materials">Pullman, P. - His Dark Materials [1-3]:</a> </li>
 				<li><a href="https://www.goodreads.com/series/45262-the-kingkiller-chronicle">Rothfuss, P. - The Kingkiller Chronicle [1-2]:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/5107.The_Catcher_in_the_Rye">Salinger, J.D. - The Catcher in the Rye:</a> </li>
