--- a/abstracts/24_individualisedfibre.html
+++ b/abstracts/24_individualisedfibre.html
@@ -19,7 +19,7 @@
       </ul>
       <div id="hero_text">
         <h1>Individualised Fibre-Ball White Matter Imaging Analysis of Drug Resistance in Focal Epilepsy [PREPRINT]</h1>
-        <h2>Ratcliffe, Andrews, Biswas, Bonhila, Marson, and Keller, 2024</h2>
+        <h2>Ratcliffe, Andrews, Biswas, Bonilha, Marson, and Keller, 2024</h2>
       </div>
     </div>
     <div id="page_content">
