--- a/abstracts/23_pintscience.html
+++ b/abstracts/23_pintscience.html
@@ -45,7 +45,7 @@
     <footer>
       <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
       <br/>Contact:
-      <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+      <a class="footer" href="mailto:corey.ratcliffe@newcastle.ac.uk">corey.ratcliffe@newcastle.ac.uk</a></p>
     </footer>
   </div>
 </body>
