--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<li><a href="https://www.researchgate.net/profile/Corey-Ratcliffe">ResearchGate
 				<li><a href="https://scholar.google.com/citations?user=bdMJzFwAAAAJ&hl=en&oi=ao">Scholar
 				<li><a href="https://www.linkedin.com/in/corey-alan-ratcliffe/">LinkedIn
-				<li><a href="https://www.liverpool.ac.uk/systems-molecular-and-integrative-biology/research/groups/brain-imaging/">Lab Page
+				<li><a href="https://www.cnnp-lab.com/">Lab Page
 				<li><a href="https://www.instagram.com/might_be_corey/?hl=en-gb">Instagram
 				<li><a href="https://www.last.fm/user/C_Ratcliffe">Last.fm
 				<li><a href="https://x.com/c__ratcliffe">Twitter/X
@@ -46,7 +46,7 @@
     <footer>
       <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
       <br/>Contact:
-      <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+      <a class="footer" href="mailto:corey.ratcliffe@newcastle.ac.uk">corey.ratcliffe@newcastle.ac.uk</a></p>
     </footer>
   </div>
 </body>
