--- a/books.html
+++ b/books.html
@@ -71,8 +71,8 @@
 				<li><a href="https://www.goodreads.com/book/show/485894.The_Metamorphosis">Kafka, F. - The Metamorphosis:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/17690.The_Trial">Kafka, F. - The Trial:</a> </li>				
 				<li><a href="https://www.goodreads.com/book/show/18373.Flowers_for_Algernon">Keyes, D. - Flowers for Algernon:</a> </li>
-				<li><a href="https://www.goodreads.com/author/show/3389.Stephen_King">King, Stephen. - Almost everything [1974-2014]:</a> </li>
-				<li><a href="https://www.goodreads.com/series/40750-the-dark-tower">King, Stephen. - The Dark Tower [1-7]:</a> </li>
+				<li><a href="https://www.goodreads.com/author/show/3389.Stephen_King">King, S. - Almost everything [1974-2014]:</a> </li>
+				<li><a href="https://www.goodreads.com/series/40750-the-dark-tower">King, S. - The Dark Tower [1-7]:</a> </li>
 				<li><a href="https://www.goodreads.com/author/show/9494.H_P_Lovecraft">Lovecraft, H.P. - Everything:</a> </li>
 				<li><a href="https://www.goodreads.com/series/43531-gentleman-bastard">Lynch, S. - Gentleman Bastard [1-3]:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/153747.Moby_Dick_or_the_Whale">Melville, H. - Moby-Dick:</a> The classic epic of obsession and adventure. The only book I have ever (partially) read that I would recommend the abridged version of--the cetology chapters absolutely destroy any narrative cohesion. [INCOMPLETE READING]</li>
@@ -90,11 +90,14 @@
         <li><a href="https://www.goodreads.com/book/show/23966.Filth">Welsh, I. - Filth:</a> </li>
       </ul>
     </div>
-    <footer>
-      <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
-      <br/>Contact:
-      <a class="footer" href="mailto:corey.ratcliffe@newcastle.ac.uk">corey.ratcliffe@newcastle.ac.uk</a></p>
-    </footer>
+		<div id="footer"></div>
+		<script>
+		  fetch("/resources/footer.html")
+		    .then(res => res.text())
+		    .then(html => {
+		      document.getElementById("footer").innerHTML = html;
+		    });
+		</script>
   </div>
 </body>
 
