--- a/books.html
+++ b/books.html
@@ -50,7 +50,7 @@
 				<li><a href="https://www.goodreads.com/book/show/1137702.The_Wendigo">Blackwood, A. - The Wendigo:</a> A classic American horror tale. Predating H.P. Lovecraft, Blackwood nevertheless create a cosmic sense of dread by exploring stark imagery in the vastness of nature.</li>
         <li><a href="https://www.goodreads.com/book/show/1078.The_Good_Earth">Buck, P.S. - The Good Earth:</a> </li>
 				<li><a href="https://www.goodreads.com/series/49996-sherlock-holmes">Conan Doyle, A. - Sherlock Holmes [1-10]:</a> </li>
-				<li><a href="https://www.goodreads.com/series/54284-the-chronicles-of-the-black-company">Cook, G. - The Chronicles of the Black Company [1-6]:</a> </li>
+				<li><a href="https://www.goodreads.com/series/54284-the-chronicles-of-the-black-company">Cook, G. - The Chronicles of the Black Company [1-8]:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/8703973-beware-of-the-dog">Dahl, R. - Beware of the Dog:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/36402034-do-androids-dream-of-electric-sheep">Dick, P.K. - Do Androids Dream of Electric Sheep?:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/216363.The_Man_in_the_High_Castle">Dick, P.K. - The Man in the High Castle:</a> </li>
@@ -76,6 +76,7 @@
 				<li><a href="https://www.goodreads.com/author/show/9494.H_P_Lovecraft">Lovecraft, H.P. - Everything:</a> </li>
 				<li><a href="https://www.goodreads.com/series/43531-gentleman-bastard">Lynch, S. - Gentleman Bastard [1-3]:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/153747.Moby_Dick_or_the_Whale">Melville, H. - Moby-Dick:</a> The classic epic of obsession and adventure. The only book I have ever (partially) read that I would recommend the abridged version of--the cetology chapters absolutely destroy any narrative cohesion. [INCOMPLETE READING]</li>
+				<li><a href="https://www.goodreads.com/book/show/6288.The_Road">McCarthy, C. - The Road:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/7604.Lolita">Nabokov, V. - Lolita:</a> </li>
         <li><a href="https://www.goodreads.com/author/show/1654.Terry_Pratchett">Pratchett, T. - Everything:</a> </li>
 				<li><a href="https://www.goodreads.com/book/show/12067.Good_Omens">Pratchett, T. & Gaiman, N. - Good Omens: The Nice and Accurate Prophecies of Agnes Nutter, Witch:</a> </li>
