--- a/abstracts/23_pintscience.html
+++ b/abstracts/23_pintscience.html
@@ -42,12 +42,15 @@
         <li>Simmonds A, Wise R, Leech R. Two Tongues, One Brain: Imaging Bilingual Speech Production. <em>Frontiers in Psychology</em> 2011;2. 
       </ol>
     </div>
-    <footer>
-      <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
-      <br/>Contact:
-      <a class="footer" href="mailto:corey.ratcliffe@newcastle.ac.uk">corey.ratcliffe@newcastle.ac.uk</a></p>
-    </footer>
-  </div>
+		<div id="footer"></div>
+		<script>
+		  fetch("/resources/footer.html")
+		    .then(res => res.text())
+		    .then(html => {
+		      document.getElementById("footer").innerHTML = html;
+		    });
+		</script>
+	</div>
 </body>
 
 </html>
