--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
     	<h3>About the author:</h3>
       <div class="row">
         <img class="col" src="img/portrait_2024.jpg" alt="Photo of the author, Corey Ratcliffe, taken in 2024." style="max-width:20rem;max-height:30rem;min-width:20rem;min-height:30rem">
-        <p class="col">Corey Ratcliffe is a PhD Student who is currently working towards developing network models of seizure recurrence in neurocysticercosis. Based at the University of Liverpool, collecting data at NIMHANS Bangalore.
+        <p class="col">Corey Ratcliffe is a PDRA neuroimager based at the University of Newcastle, who is currently working towards using imaging features to predict surgical outcome in epilepsy. He has published research in areas related to infection related-seizures, epilepsy prediction models, network neuroimaging, and general MRI analysis.
         </br>The intention for this site is threefold; for it to function as a professional-academic portfolio, a resource for those new to modern neuroscience practices and methods, and an introduction to me outside of academia, in the form of a book & music blog. To this end, please feel free to get in touch with me—via my contact address in the page footer—if you'd like any further information regarding my work or my interests. Cheers!
       </div>
       <h3>Curriculum Vitae:</h3>
