--- a/cv.html
+++ b/cv.html
@@ -31,8 +31,8 @@
       </div>
       <h3>Curriculum Vitae:</h3>
       <div class="row">
-        <a href="resources/CV.pdf" download="c-ratcliffe_CV.pdf">
-          <img class="col" src="img/CV.png" alt="CV - 05.24" style="width:100%;min-width:100%">
+        <a href="resources/25_c-ratcliffe_cv.pdf" download="25_c-ratcliffe_cv.pdf">
+          <img class="col" src="img/25_c-ratcliffe_cv.png" alt="CV - 10.25" style="width:100%;min-width:100%">
         </a>
       </div>
     </div>
